# advent-of-code-2021

./: .gitignore  LICENSE  README.md  adventofcode2021.cabal  stack.yaml
run/: Run.hs  Spec.hs
spec/: Test01.hs  Test02.hs  Test03.hs  Test04.hs  Test05.hs  Test06.hs  Test07.hs  Test08.hs  Test09.hs  Test10.hs  Test11.hs  Test12.hs  Test13.hs  Test14.hs  Test15.hs  Test16.hs  Test17.hs  Test21.hs  Test22.hs  Test24.hs  Test25.hs
src/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs
src/help/: Common.hs
src/help/Common/: Matrix.hs  Optics.hs
src/help/Common/State/: Poly.hs  Trans.hs
src/main/: Day01.hs  Day02.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day21.hs  Day22.hs  Day24.hs  Day25.hs
