cabal-version: 3.0

name: adventofcode2021
version: 0.1.0.0
author: rvLMdE7
build-type: Simple
license: BSD-3-Clause

license-file: LICENSE
extra-source-files: README.md
data-files: input/*.txt


common common-ghc-lib-options
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
        -fhide-source-paths

common common-ghc-exe-options
    import: common-ghc-lib-options
    ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N

common common-lang-options
    default-language: Haskell2010
    default-extensions:
        , BinaryLiterals
        , ImportQualifiedPost
        , LambdaCase
        , NumericUnderscores
        , TypeApplications


common common-runtime-options
    import:
        , common-lang-options
        , common-ghc-exe-options
    hs-source-dirs: run
    build-depends: base

common common-exe-options
    import: common-runtime-options
    build-depends: adventofcode2021

common common-test-options
    import: common-runtime-options
    build-depends: adventofcode2021-tests

common common-lib-options
    import:
        , common-lang-options
        , common-ghc-lib-options
    build-depends:
        , base ^>=4.14
        , bytestring
        , containers
        , flow
        , interpolatedstring-perl6
        , linear
        , megaparsec
        , mtl
        , optics
        , parser-combinators
        , text
        , vector
        , vector-algorithms


library
    import: common-lib-options
    hs-source-dirs:
        , src/main
        , src/help
    other-modules: Paths_adventofcode2021
    exposed-modules:
        , Common
        , Day01
        , Day02
        , Day03
        , Day04
        , Day05
        , Day06
        , Day07
        , Day08

library adventofcode2021-tests
    import: common-lib-options
    hs-source-dirs: spec
    build-depends:
        , adventofcode2021
        , tasty
        , tasty-hunit
        , tasty-quickcheck
    exposed-modules:
        , Test01
        , Test02
        , Test03
        , Test04
        , Test05
        , Test06
        , Test07
        , Test08


executable day-01
    import: common-exe-options
    mixins: adventofcode2021 (Day01 as Day)
    main-is: Run.hs

executable day-02
    import: common-exe-options
    mixins: adventofcode2021 (Day02 as Day)
    main-is: Run.hs

executable day-03
    import: common-exe-options
    mixins: adventofcode2021 (Day03 as Day)
    main-is: Run.hs

executable day-04
    import: common-exe-options
    mixins: adventofcode2021 (Day04 as Day)
    main-is: Run.hs

executable day-05
    import: common-exe-options
    mixins: adventofcode2021 (Day05 as Day)
    main-is: Run.hs

executable day-06
    import: common-exe-options
    mixins: adventofcode2021 (Day06 as Day)
    main-is: Run.hs

executable day-07
    import: common-exe-options
    mixins: adventofcode2021 (Day07 as Day)
    main-is: Run.hs

executable day-08
    import: common-exe-options
    mixins: adventofcode2021 (Day08 as Day)
    main-is: Run.hs


test-suite test-01
    import: common-test-options
    mixins: adventofcode2021-tests (Test01 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite test-02
    import: common-test-options
    mixins: adventofcode2021-tests (Test02 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite test-03
    import: common-test-options
    mixins: adventofcode2021-tests (Test03 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite test-04
    import: common-test-options
    mixins: adventofcode2021-tests (Test04 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite test-05
    import: common-test-options
    mixins: adventofcode2021-tests (Test05 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite test-06
    import: common-test-options
    mixins: adventofcode2021-tests (Test06 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite test-07
    import: common-test-options
    mixins: adventofcode2021-tests (Test07 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite test-08
    import: common-test-options
    mixins: adventofcode2021-tests (Test08 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0
